<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#F1CB6F"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="26dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="13dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/age"
        android:textColor="@color/purple_200" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/in_minute"
        android:textColor="@color/textBlue" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:text="@string/select_date"
        android:layout_margin="16dp"
        app:cornerRadius="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:layout_height="60sp"
        android:backgroundTint="#2a9d8f"
        />


    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/_31_05_1998"
        android:textColor="@color/textBlue"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="23sp"
        android:text="@string/selected_date"
        android:textColor="#9C09EB" />

    <TextView
        android:id="@+id/tvAgeInMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="35sp"
        android:text="@string/_num"
        android:textColor="@color/textBlue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="23sp"
        android:text="@string/selected_date"
        android:textColor="#9C09EB" />



</LinearLayout>